[gd_scene load_steps=15 format=3 uid="uid://kwr75a1p3qrm"]

[ext_resource type="Script" path="res://Scenes/HostileShip.gd" id="1_lwgul"]
[ext_resource type="Texture2D" uid="uid://dic62egg7dtn4" path="res://Assets/smoke_02.png" id="4_7dmjl"]
[ext_resource type="Texture2D" uid="uid://dxhiurny73kpr" path="res://Assets/Spaceship/Spaceship_top_Main Camera.png" id="5_hvgmw"]
[ext_resource type="AudioStream" uid="uid://18n3m3gw8twb" path="res://Assets/Sounds/turbine_01.wav" id="6_fr12v"]
[ext_resource type="Texture2D" uid="uid://b3g3ju4xwuygm" path="res://Assets/Light.png" id="7_bismj"]
[ext_resource type="Shader" path="res://Scenes/Radar.gdshader" id="8_4pdha"]

[sub_resource type="Curve" id="Curve_qk12j"]
_data = [Vector2(0, 0.297297), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_rlrpj"]
curve = SubResource("Curve_qk12j")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kyfni"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 1.244
initial_velocity_max = 1.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 308.99
radial_velocity_min = -2.23517e-05
radial_velocity_max = -2.23517e-05
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_rlrpj")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_liav1"]
light_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ku2rg"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.969432, 0.527551, 0.201925, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="CircleShape2D" id="CircleShape2D_63pb3"]
resource_local_to_scene = true
radius = 150.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v4ssc"]
resource_local_to_scene = true
shader = ExtResource("8_4pdha")
shader_parameter/line_color = Color(0.253, 0.622, 0.847, 1)
shader_parameter/range_lines = 1.0
shader_parameter/sector_lines = 0.0
shader_parameter/line_width = 0.0011
shader_parameter/beam_angle = 0.2
shader_parameter/beam_width = 0.003
shader_parameter/trail_width = 0.1
shader_parameter/sector_rotation = 0.5
shader_parameter/ShowRadat = true
shader_parameter/scale_factor = 0.015

[sub_resource type="CircleShape2D" id="CircleShape2D_2wcmb"]
radius = 2.0

[node name="HostileShip" type="Node2D" groups=["Ships"]]
script = ExtResource("1_lwgul")
RadarRange = 800

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-7, 0)
amount = 50
process_material = SubResource("ParticleProcessMaterial_kyfni")
texture = ExtResource("4_7dmjl")
lifetime = 20.0

[node name="Node2D2" type="Node2D" parent="."]

[node name="PlayerShipSpr" type="Sprite2D" parent="Node2D2"]
rotation = -1.5708
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_hvgmw")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0.5, 0)

[node name="Panel" type="Panel" parent="." groups=["MapShipVizualiser"]]
material = SubResource("CanvasItemMaterial_liav1")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -17.0
offset_right = 17.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ku2rg")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_fr12v")
volume_db = -15.0
pitch_scale = 0.5
bus = &"MapSounds"

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(7.97656, 7.97656)
energy = 0.5
blend_mode = 2
shadow_color = Color(0.919342, 0, 0.452291, 0)
texture = ExtResource("7_bismj")
texture_scale = 0.25
height = 100.0

[node name="Radar2" type="Area2D" parent="."]
rotation = -0.282025
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radar2"]
shape = SubResource("CircleShape2D_63pb3")

[node name="Radar_Range" type="ColorRect" parent="Radar2" groups=["MapLines"]]
material = SubResource("ShaderMaterial_v4ssc")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10000.0
offset_top = -10000.0
offset_right = 10000.0
offset_bottom = 10000.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="ShipBody" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipBody"]
shape = SubResource("CircleShape2D_2wcmb")

[connection signal="area_entered" from="Radar2" to="." method="_on_radar_2_area_entered"]
[connection signal="area_entered" from="ShipBody" to="." method="_on_ship_body_area_entered"]
